# duo-app

./: .gitignore  Dockerfile  duo.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  credentials.toml  machine_id_v4
app/: 40TEST_🏫_AI_Learning_Analytics_Demo.py  44_📊_Dashboard_AI_BI_Demo.py  66_Chat_lokaal_Deepseek_Demo.py  __init__.py  __main__.py  de_data_democraat_duo.py  log.txt  print_color.py
