[project]
name = "duo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "google-genai>=1.49.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mss>=10.1.0",
    "numba>=0.62.1",
    "numexpr>=2.14.1",
    "numpy>=2.2.6",
    "ollama>=0.6.0",
    "openai>=2.7.2",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyaudio>=0.2.14",
    "pydantic>=2.12.4",
    "pydantic-ai>=1.14.0",
    "pydantic-settings>=2.12.0",
    "pydub>=0.25.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "streamlit>=1.51.0",
    "streamlit-extras>=0.7.8",
    "streamlit-mic-recorder>=0.0.8",
]
